--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
     <p>
         hola mis amigos este es mi sitio web
-        siganme en twiter por si, necesitan algo
+        MI hermano Isaac esta flojiando y no quiere hablar con papa
+        a una de mis primas se le perdio el celular
+        y la otra no se donde esta
     </p>
 </body>
 </html>
